Friday, 5th December, Al Riddoch <alriddoch@zepler.org>

	* Fix test/Makefile.am so the tests build but don't run.

Tuesday, 2nd December, Al Riddoch <alriddoch@zepler.org>

	* Supress unknown pragme warnings, and add canonical macros.

Thursday, 27th November, James Turner <james@worldforge.org>

    * Apply Ron's patch for transforming WFMath objects
      based on an entity's pos and orientation.

Monday, 24th November, James Turner <james@worldforge.org>
    * Add accessor for Person objects directly on Room.
    
Monday, 24th November, Al Riddoch <alriddoch@zepler.org>

	* Eris/Avatar.cpp: Fix all uses of send() to pass a reference
	  rather than a pointer. Why did this compile?

Sunday, 23nd November, Ron Steinke <rsteinke@w-link.net>

	* Added take(), touch(), say(), move(), and place()
	  methods to Avatar, to complement the existing drop()
	  method.

Sunday, 2nd November, Ron Steinke <rsteinke@w-link.net>

	* Replaced Time::Stamp class with a typedef to
	  WFMath::TimeStamp (which was originally a copy
	  of Time::Stamp).

Sunday, 26th October, Ron Steinke <rsteinke@w-link.net>

	* Added the capacity to have multiple timeouts with
	  the same name, as long as they are owned by different
	  object instances. This fixes a problem with the code
	  that allows multiple simultaneous Connection instances.

Thursday, 23rd October, Simon Goodall <simon@simongoodall.co.uk>
	* Fixed configure.ac to use eris-poll-glib-1.2.pc in second glib test

Monday, 20th October, James Turner <james@worldforge.org>

	* Add ProjectBuilder project - currently requires a modified
	  libsigc++ framework which I'll upload to FTP at some point.

Saturday, 20th September, Ron Steinke <rsteinke@w-link.net>

	* Fixed test code so it acutally builds, mostly Atlas
	  stuff and changing pollDefault to PollDefault (which is
	  odd, because it's _never_ been pollDefault).

Saturday, 23rd August, Al Riddoch <alriddoch@zepler.org>

	* Eris/BaseConnection.cpp: Switch to using skstream::isReady()